@@ -30,6 +30,7 @@
     * Use M400 instead of G4 for printer queue syncing
     * Added printer name and location validation to wizard
     * Reworked errors in validation of printer name and location in Link settings
+    * Reworked validation of correct S/N write
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
